fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ html {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  overflow: hidden;
 }
 
 .App-link {
